Mon Mar  2 21:06:40 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/raddrinfo.c (addrinfo_mload): don't use "sun" variable
	  for Solaris.

Mon Mar  2 21:01:36 2009  Tanaka Akira  <akr@fsij.org>

	* file.c: include fcntl.h for O_RDONLY on Solaris.

Mon Mar  2 19:43:02 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/uri/common.rb (URI::Parser#escape): escaped string is ascii
	  only.

	* lib/uri/common.rb (URI::Parser#unescape): converts bytewise.
	  [ruby-dev:38005], [ruby-dev:38110]

Mon Mar  2 16:40:11 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* README.EXT, README.EXT.ja (Macros): added HAVE_RUBY_*_H.

Mon Mar  2 12:22:12 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (init_env): keeps wide chars as wide chars.

Mon Mar  2 11:01:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/dl.h (dlerror): fixed on Windows.

	* ext/dl/handle.c (rb_dlhandle_initialize): returns handle to
	  libruby if nil is given on Windows as dlopen.

	* ext/dl/handle.c (rb_dlhandle_sym): get rid of buffer overrun,
	  and try ASCII WINAPI versions too.

Mon Mar  2 10:29:17 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_longjmp), include/ruby/intern.h (ruby_cleanup): fixed
	  prototypes.

Mon Mar  2 00:56:45 2009  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/observer.rb: The module oberservable uses now a hash to
	  store listeners. merged a patch from Alessandro Di Maria in
	  [ruby-core:22560].

Sun Mar  1 22:59:41 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/raddrinfo.c: suppress warnings.

	* ext/socket/socket.c: ditto.

	* ext/socket/unixsocket.c: ditto.

Sun Mar  1 20:57:41 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ (rsock_getfamily): renamed from rb_sock_getfamily.

Sun Mar  1 19:52:46 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/win32/lib/Win32API.rb (initialize): passes res
	  arguments to DL.

Sun Mar  1 19:38:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
